[package]
name = "daas"
version = "0.0.4"
authors = ["dsietz <davidsietz@yahoo.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data", "daas", "sdk", "design", "development"]
categories = ["web-programming", "development-tools", "data-structures","config"]
description = "A software development kit for Data as a Service (DaaS)."
documentation = "https://docs.rs/daas"
repository = "https://github.com/dsietz/daas-sdk"
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[lib]
name = "daas"
path = "src/lib.rs"

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
env_logger = "0.7"
futures = "0.1"
log = "0.4"
pbd = "0.1"
serde ="1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.7.3"
openssl = "0.10.26"
actix-web = "1.0.9"
rusoto_core = "0.42"
rusoto_s3 = "0.42"

[dependencies.kafka]
version = "0.8.0"
default-features = false
features = ["snappy","gzip"]

[dev-dependencies]
url = "2.1.1"
base64 = "0.11"

[dev-dependencies.reqwest]
version = "0.10"
defulat-features = false
features =["blocking"]