[package]
name = "daas"
version = "0.2.2"
authors = ["dsietz <davidsietz@yahoo.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data", "daas", "sdk", "design", "development"]
categories = ["web-programming", "development-tools", "data-structures","config"]
description = "A software development kit for Data as a Service (DaaS)."
documentation = "https://docs.rs/daas"
repository = "https://github.com/dsietz/daas-sdk"
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[lib]
name = "daas"
path = "src/lib.rs"

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
env_logger = "0.7"
futures = "0.3"
log = "0.4"
pbd = "0.4"
serde ="1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.7.3"
openssl = "0.10"
actix-web = "3"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
base64 = "~0.11"
async-trait = "~0.1"
tokio = "1.13.0"

[dependencies.kafka]
version = "~0.8.0"
default-features = false
features = ["snappy","gzip"]

[dev-dependencies]
url = "2.1.1"
base64 = "0.11"
json = "0.12"
actix-rt = "2.4"

[dev-dependencies.reqwest]
version = "0.10"
default-features = false
features =["blocking"]